argocd/config/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.crobasaurusrex.ryanbeales.com
    secretName: argocd-crobasaurusrex-ryanbeales-com-tls
  rules:
  - host: argocd.crobasaurusrex.ryanbeales.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
